fix: update Puppeteer configuration for Render deployment

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Axiom Pro Pulse Auto-Buy Bot",
   "main": "mooncycle-bot.js",
   "scripts": {
-    "start": "node mooncycle-bot.js"
+    "start": "node mooncycle-bot.js",
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
     "puppeteer": "^21.3.8"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
